# light-localization

flatland/: .gitignore  CMakeLists.txt  Makefile  animate.cpp  convolutionSeparable.cu  cudamap.cu  cudamap.h  density.f.glsl  fileio.cpp  fileio.h  filter.h  genadj.py  genppm.sh  geometry.h  glplot.cpp  glplot.h  grad.f.glsl  graph.f.glsl  graph.v.glsl  heightmap.f.glsl  heightmap.v.glsl  loadshader.cpp  localmin.f.glsl  main.cpp  medialaxis.f.glsl  options.h  runall.sh  solveCeres.cpp  sourcemap.f.glsl  tboshader.f.glsl  tboshader.v.glsl  visual.cpp  voronoi.f.glsl
optimization/: Makefile  cube40.ply  gen3d.py  generate.py  main.cpp  runall.sh  solveCeres.cpp  solveCeres.h
pyvis/: vis.py
synthetic/: .gitignore  Makefile  README  basis.cpp  solvesbl.m  synthetic.cpp
threed/: .gitignore  Makefile  cudamap.cu  cudamap.h  extract.cpp  extract.h  fileio.h  fixedlight.f.glsl  medialaxis.f.glsl  mesh.cpp  mesh.h  options.h  pass.f.glsl  pass.v.glsl  planemanager.cpp  planemanager.h  pointcloud.f.glsl  pointcloud.v.glsl  pointdepth.v.glsl  sourcemap.f.glsl  sphere.ply  tboshader.f.glsl  tboshader.v.glsl  texplane.v.glsl  visual.cpp
